force-app/main/default/objects/Movie__c/fields/Last_Summarize__c.field-meta.xml
<CustomField>
    <fullName>Last_Summarize__c</fullName>
    <label>Last Summarize Review</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>