force-app/main/default/objects/Movie__c/fields/Rating_Count__c.field-meta.xml
<CustomField>
    <fullName>Rating_Count__c</fullName>
    <label>Rating Count</label>
    <summaryForeignKey>Review__c.Movie__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>