force-app/main/default/objects/Movie__c/fields/Rating_Sum__c.field-meta.xml
<CustomField>
    <fullName>Rating_Sum__c</fullName>
    <label>Rating Sum</label>
    <summarizedField>Review__c.Rating__c</summarizedField>
    <summaryForeignKey>Review__c.Movie__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>