force-app/main/default/objects/Movie__c/fields/Trailer__c.field-meta.xml
<CustomField>
    <fullName>Trailer__c</fullName>
    <label>Trailer</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>